# genai-platform-poc

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/api/: chat_controller.py
src/infra/: database.py  exception_handlers.py  exceptions.py  settings.py
src/middlewares/: correlation_id.py
src/models/: prompt_history.py
src/repositories/: prompt_repository.py
src/schemas/: chat_request.py  chat_response.py
src/services/: chat_service.py  llm_service.py
tests/: conftest.py
tests/integration/: test_chat_endpoint.py  test_health.py
tests/unit/: test_chat_service.py  test_llm_service.py
