[tool.poetry]
name = "genai-platform-poc"
version = "0.1.0"
description = "GenAI Platform POC"
authors = ["echinen"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.139.0"
uvicorn = "^0.29.0"
mongoengine = "^0.27.0"
boto3 = "^1.26.0"
selenium = "^4.9.0"
requests = "^2.31.0"
pydantic = "^2.13.0"
pydantic-settings = "^2.14.2"
httpx = "^0.28.1"
tenacity = "^9.0.0"
aiobreaker = "^1.2.0"
pyOpenSSL = "^23.2.0"
beautifulsoup4 = "^4.12.0"
selenium-wire = "^5.1.0"
sqlalchemy = "^2.0.51"
alembic = "^1.18.5"
psycopg2-binary = "^2.9.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
